--- a/SampleApplication/app/src/main/AndroidManifest.xml
+++ b/SampleApplication/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
 
         <activity
             android:name=".activities.SplashActivity"
-            android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
